# voxcortex

./: LICENSE  README.md  pyproject.toml
HealthCheck/: 01_01_gcp_API_test.py  01_02_list_gcp_model.py  02_db_health_check.py  03_ai_audit_check.py  04_hypothesis_persist_check.py  05_promotion_check.py
apps/adminconsole/: api.py
infra/sql/: 001_init.sql
services/audit/: ai_call_audit.py
services/beliefcore/: models.py  update_engine.py
services/cortexreasoner/: explainer.py  gemini_reasoner.py  hypothesis_generator.py  hypothesis_promoter.py  hypothesis_store.py  llm_client.py
services/evidencevault/: provenance.py  snapshot.py
services/policy/: policy_gate.py
services/shared/: config.py  crypto.py  db.py  evidence_canon.py  evidence_store.py  ids.py  logging.py
services/signalmesh/: app.py  normalizer.py  schemas.py
services/voiceio/: prosody_encoder.py  tts_elevenlabs.py
tests/: test_policy_gate.py
workers/: phase0_worker.py
